tests/NormalTests/paczka1/fuzzy1/52614379.err
Error in line 8: rpvlagIj S913 72,14
Error in line 18: He15JmylI5l S350 66,1
